--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "jsonp": "^0.2.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
