--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode=development",
+    "test": "vue-cli-service serve --mode=test",
+    "prev": "vue-cli-service serve --mode=prev",
     "build": "vue-cli-service build --mode=production",
     "lint": "vue-cli-service lint"
   },
@@ -12,6 +14,7 @@
     "core-js": "^3.6.5",
     "jsonp": "^0.2.1",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.4.2",
     "vuex": "^3.5.1"
   },
